--- a/akka-core/pom.xml
+++ b/akka-core/pom.xml
@@ -12,10 +12,19 @@
     <artifactId>akka-core</artifactId>
 
     <dependencies>
+
+
+
+        <!-- slf4j  -->
         <dependency>
-            <groupId>com.xkeshi</groupId>
-            <artifactId>xkeshi-framework-core</artifactId>
-            <version>1.0.15</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
         </dependency>
 
         <dependency>
