--- a/akka-spring/pom.xml
+++ b/akka-spring/pom.xml
@@ -9,13 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demon-client</artifactId>
-
+    <artifactId>akka-spring</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.xkeshi</groupId>
-            <artifactId>akka-spring</artifactId>
+            <artifactId>xkeshi-framework-core</artifactId>
+            <version>1.0.15</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xkeshi</groupId>
+            <artifactId>akka-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
