--- a/demon-server/pom.xml
+++ b/demon-server/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.xkeshi</groupId>
-            <artifactId>akka-core</artifactId>
+            <artifactId>akka-spring</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
