新增metric检测服务器状态

--- a/akka-core/src/main/resources/application.conf
+++ b/akka-core/src/main/resources/application.conf
@@ -15,5 +15,30 @@ akka {
     "akka.tcp://EsbSystem@127.0.0.1:2552"]
     auto-down = on
   }
-  
+
+
+}
+akka.cluster.metrics {
+    dispatcher = ""
+    periodic-tasks-initial-delay = 1s
+    native-library-extract-folder = ${user.dir}"/native"
+    supervisor {
+        name = "cluster-metrics"
+        strategy {
+            provider = "akka.cluster.metrics.ClusterMetricsStrategy"
+            configuration = {
+                loggingEnabled = true
+                withinTimeRange = 3s
+                maxNrOfRetries = 3
+            }
+        }
+    }
+    collector {
+        enabled = on
+        provider = ""
+        fallback = true
+        sample-interval = 30s
+        gossip-interval = 30s
+        moving-average-half-life = 12s
+    }
 }
