--- a/task-business/pom.xml
+++ b/task-business/pom.xml
@@ -19,6 +19,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+      <dependency>
+        <groupId>com.xkeshi</groupId>
+        <artifactId>xkeshi-framework-core</artifactId>
+        <version>1.0.18</version>
+      </dependency>
+
         <dependency>
             <groupId>com.xkeshi</groupId>
             <artifactId>task-api</artifactId>
