--- a/task-dubbo/src/main/resources/props/datasource.properties
+++ b/task-dubbo/src/main/resources/props/datasource.properties
@@ -1,9 +1,9 @@
 jdbc.driver=com.mysql.jdbc.Driver
 
 #order jdbc connection
-order.jdbc.url=jdbc:mysql://192.168.184.10:3306/xkeshi_oms?useUnicode=true&characterEncoding=UTF-8
-order.jdbc.user=user_frame
-order.jdbc.password=frame_2015
+order.jdbc.url=jdbc\:mysql\://192.168.181.182/public_task?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=round
+order.jdbc.user=dbunit
+order.jdbc.password=123456a
 
 #jdbc pool
 jdbc.pool.maxActive=5
